test-cases/final-dump/unique_member.exp
Error detected during uniqueness checking of module(s) unique_member, unique_member.ty
final-dump/unique_member.wybe:3:20: Unique constructor argument uniq of non-unique type
